externalized spring and hibernate config, removed OpenAPI Java annotations in favor of OpenApi .yaml file
