# src/main/java/org/ga4gh/registry/controller/Services.java
@@ -1,20 +1,8 @@
 package org.ga4gh.registry.controller;
 
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.ExampleObject;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import org.ga4gh.registry.annotation.openapi.ApiResponseBadRequest;
-import org.ga4gh.registry.annotation.openapi.ApiResponseNotFound;
-import org.ga4gh.registry.annotation.openapi.ApiResponseServerError;
-import org.ga4gh.registry.annotation.openapi.ParameterType;
-import org.ga4gh.registry.constant.HttpStatus;
-import org.ga4gh.registry.constant.HttpStatusDescription;
-import org.ga4gh.registry.example.Example;
 import org.ga4gh.registry.model.Implementation;
 import org.ga4gh.registry.model.ServiceType;
 import org.ga4gh.registry.util.QuerySerializer;
@@ -33,28 +21,6 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/services")
 public class Services {
 
-    @Operation(summary = "List services",
-               description = "Get list of web service implementations of GA4GH standards")
-    @ParameterType
-    @ApiResponse(
-        responseCode = HttpStatus.OK,
-        description = HttpStatusDescription.OK,
-        content = {
-            @Content(
-                mediaType = MediaType.APPLICATION_JSON_UTF8_VALUE,
-                schema = @Schema(implementation = Implementation.class),
-                examples = {
-                    @ExampleObject(
-                        name = "Services list",
-                        summary = "Services list",
-                        value = Example.SERVICE_LIST
-                    )
-                }
-            )
-        }
-    )
-    @ApiResponseBadRequest
-    @ApiResponseServerError
     @GetMapping(produces = MediaType.APPLICATION_JSON_UTF8_VALUE)
     public String getServices(@RequestParam(required = false) String type) {
         
@@ -77,27 +43,6 @@ public class Services {
         return querySerializer.queryAndSerialize();
     }
 
-    @Operation(summary = "Get service by Id",
-               description = "Get all details about a single service")
-    @ApiResponse(
-        responseCode = HttpStatus.OK,
-        description = HttpStatusDescription.OK,
-        content = {
-            @Content(
-                mediaType = MediaType.APPLICATION_JSON_UTF8_VALUE,
-                schema = @Schema(implementation = Implementation.class),
-                examples = {
-                    @ExampleObject(
-                        name = "Service",
-                        summary = "Service",
-                        value = Example.SERVICE
-                    )
-                }
-            )
-        }
-    )
-    @ApiResponseNotFound
-    @ApiResponseServerError
     @GetMapping(path = "/{serviceId}",
                 produces = MediaType.APPLICATION_JSON_UTF8_VALUE)
     public String getServiceById(
@@ -114,26 +59,6 @@ public class Services {
             .queryAndSerialize();
     }
 
-    @Operation(summary = "List service types",
-               description = "Get list of all unique service types in the registry")    
-    @ApiResponse(
-        responseCode = HttpStatus.OK,
-        description = HttpStatusDescription.OK,
-        content = {
-            @Content(
-                mediaType = MediaType.APPLICATION_JSON_UTF8_VALUE,
-                schema = @Schema(implementation = ServiceType.class),
-                examples = {
-                    @ExampleObject(
-                        name = "Service Type list",
-                        summary = "Service Type list",
-                        value = Example.TYPE_LIST
-                    )
-                }
-            )
-        }
-    )
-    @ApiResponseServerError
     @GetMapping(path = "/types",
                 produces = MediaType.APPLICATION_JSON_UTF8_VALUE)
     public Set<ServiceType> getServiceTypes() {
